nginx-b-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-b-deployment
  namespace: my-nginx-b
spec:
  #replicas: 1
  selector:
    matchLabels:
      component: nginx-b
  template:
    metadata:
      labels:
        component: nginx-b
        dev-team: dev1
    spec:
      containers:
        - name: my-nginx-b
          image: nginx:1.17.5
          ports:
            - containerPort: 80
