nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-deployment
  namespace: my-nginx
spec:
  #replicas: 1
  selector:
    matchLabels:
      component: nginx
  template:
    metadata:
      labels:
        component: nginx
        dev-team: dev1
    spec:
      containers:
        - name: my-nginx
          image: nginx:1.17.5
          ports:
            - containerPort: 80
