redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: redis-deployment
   namespace: web-visit-count
spec:
   replicas: 1
   selector:
      matchLabels:
         component: redis
   template:
      metadata:
         labels:
            component: redis
      spec:
         containers:
            - name: redis-server
              image: redis:4.0.14
              ports:
                 - containerPort: 6379
