web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: web-deployment
   namespace: web-visit-count
spec:
   replicas: 2
   selector:
      matchLabels:
         component: web
   template:
      metadata:
         labels:
            component: web
      spec:
         containers:
            - name: web-visit-count
              image: fefefe8888/web-visit-count:1.3
              ports:
                 - containerPort: 8080
