nginx-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-cluster-ip
  namespace: my-nginx
spec:
  type: ClusterIP
  selector:
    component: nginx
  ports:
    - port: 80
      targetPort: 80
