redis-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
   name: redis-server
   namespace: web-visit-count
spec:
   type: ClusterIP
   selector:
      component: redis
   ports:
      - port: 6379
        targetPort: 6379
